# path_tracing

./: CMakeLists.txt  Makefile  README.md  TODO
src/: bdpt.cpp  bdpt_generate_path.cpp  brdf.cpp  brdf.hh  classic_pt.cpp  image.cpp  image.hh  light.cpp  light.hh  light_path.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  object.cpp  object.hh  pathtracer.cpp  pathtracer.hh  pt.cpp  radiance.cpp  ray.hh  raycasting.cpp  render.cpp  render.hh  rt.cpp  scene.cpp  scene.hh  test_scene1.cpp  test_scene2.cpp  texture.cpp  texture.hh  vector3.cpp
src/objects/: bsdf.cpp  bsdf.hh  material.cpp  material.hh  object.cpp  object.hh  object_loader.cpp  object_loader.hh  texture.cpp  texture.hh
src/objects/bsdf/: blinn_phong.cpp  bsdf.cpp  bsdf.hh  diffuse.cpp  mirror.cpp  phong.cpp
src/objects/models/: model.hh  sphere.cpp  square.cpp  triangle_mesh.cpp
src/parser/: parse_arg.cpp  parser.hh
src/pathtracer/objects/: material.hh  texture.cpp
src/pathtracer/objects/models/: model.hh  sphere.cpp  square.cpp  triangle_mesh.cpp
src/pathtracer/utils/: ray.cpp
src/raytracer/: ray.cpp  ray.hh  raytracer.cpp  raytracer.hh  scene.cpp  scene.hh  vector3.cpp  vector3.hh
src/raytracer/lights/: ambient.cpp  directional.cpp  light.hh  point.cpp
src/raytracer/objects/: object.cpp  object.hh  sphere.cpp  square.cpp  texture.cpp  texture.hh  triangle_mesh.cpp
src/utils/: matrix.hh  ray.hh  sampler.cpp  sampler.hh  vector3.cpp  vector3.hh  vertex.hh
